argocd/applications/infrastructure/keycloak.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"argoproj.io/v1alpha1","kind":"Application","metadata":{"annotations":{},"creationTimestamp":"2024-06-05T20:58:08Z","generation":7709,"labels":{"project":"infrastructure","source":"internal"},"managedFields":[{"apiVersion":"argoproj.io/v1alpha1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/last-applied-configuration":{}},"f:labels":{".":{},"f:project":{},"f:source":{}}},"f:spec":{".":{},"f:destination":{".":{},"f:namespace [...]
      synced (all tasks
      run)","operation":{"initiatedBy":{"username":"admin"},"retry":{},"sync":{"revision":"5face3373364205637e1826f7fd23219f1821738","syncOptions":["CreateNamespace=true"],"syncStrategy":{"hook":{}}}},"phase":"Succeeded","startedAt":"2024-06-12T17:41:04Z","syncResult":{"resources":[{"group":"","hookPhase":"Running","kind":"ConfigMap","message":"configmap/keycloak-configmap
      configured","name":"keycloak-configmap","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/keycloak-postgres-service
      configured","name":"keycloak-postgres-service","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/keycloak-service
      configured","name":"keycloak-service","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"apps","hookPhase":"Running","kind":"Deployment","message":"deployment.apps/keycloak
      configured","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"apps","hookPhase":"Running","kind":"StatefulSet","message":"statefulset.apps/keycloak-postgres
      configured","name":"keycloak-postgres","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"networking.k8s.io","hookPhase":"Running","kind":"Ingress","message":"ingress.networking.k8s.io/keycloak-ingress
      configured","name":"keycloak-ingress","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"}],"revision":"5face3373364205637e1826f7fd23219f1821738","source":{"path":"cluster/argocd/sources/keycloak","repoURL":"git@github.com:Binesty/Kubernetes.git","targetRevision":"main"}}},"reconciledAt":"2024-07-19T16:52:17Z","resources":[{"kind":"ConfigMap","name":"keycloak-configmap","namespace":"keycloak","status":"Synced","version":"v1"},{"health":{"status":"Healthy"},"kind":"Se [...]
      roll out complete: 1 new pods have been
      updated...","status":"Healthy"},"kind":"StatefulSet","name":"keycloak-postgres","namespace":"keycloak","status":"Synced","version":"v1"},{"group":"networking.k8s.io","health":{"status":"Healthy"},"kind":"Ingress","name":"keycloak-ingress","namespace":"keycloak","status":"Synced","version":"v1"}],"sourceType":"Kustomize","summary":{"externalURLs":["https://keycloak.binesty.io/"],"images":["postgres:latest","quay.io/keycloak/keycloak:latest"]},"sync":{"comparedTo":{"destination":{"namespace" [...]
  creationTimestamp: '2024-07-22T14:51:11Z'
  generation: 204
  labels:
    project: infrastructure
    source: internal
  managedFields:
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:project: {}
            f:source: {}
        f:spec:
          .: {}
          f:destination:
            .: {}
            f:namespace: {}
            f:server: {}
          f:project: {}
          f:source:
            .: {}
            f:path: {}
            f:repoURL: {}
            f:targetRevision: {}
          f:syncPolicy:
            .: {}
            f:syncOptions: {}
        f:status:
          .: {}
          f:controllerNamespace: {}
          f:health: {}
          f:sourceType: {}
          f:summary: {}
          f:sync:
            .: {}
            f:comparedTo:
              .: {}
              f:destination:
                .: {}
                f:namespace: {}
                f:server: {}
              f:source:
                .: {}
                f:path: {}
                f:repoURL: {}
                f:targetRevision: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2024-07-22T14:51:11Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:health:
            f:status: {}
          f:history: {}
          f:operationState:
            .: {}
            f:finishedAt: {}
            f:message: {}
            f:operation:
              .: {}
              f:initiatedBy:
                .: {}
                f:username: {}
              f:retry: {}
              f:sync:
                .: {}
                f:revision: {}
                f:syncOptions: {}
                f:syncStrategy:
                  .: {}
                  f:hook: {}
            f:phase: {}
            f:startedAt: {}
            f:syncResult:
              .: {}
              f:resources: {}
              f:revision: {}
              f:source:
                .: {}
                f:path: {}
                f:repoURL: {}
                f:targetRevision: {}
          f:reconciledAt: {}
          f:resources: {}
          f:summary:
            f:images: {}
          f:sync:
            f:revision: {}
            f:status: {}
      manager: argocd-application-controller
      operation: Update
      time: '2024-07-23T12:30:57Z'
  name: keycloak
  namespace: argocd
  resourceVersion: '233459'
  uid: cba64f82-83fc-4bd1-a54e-241865c648e5
  selfLink: /apis/argoproj.io/v1alpha1/namespaces/argocd/applications/keycloak
status:
  controllerNamespace: argocd
  health:
    status: Healthy
  history:
    - deployStartedAt: '2024-05-03T02:26:37Z'
      deployedAt: '2024-05-03T02:26:41Z'
      id: 0
      initiatedBy: {}
      revision: 08da1a328a6a000090effabac578be9ddc271dd1
      source:
        path: cluster/argocd/sources/keycloak
        repoURL: git@github.com:Binesty/Kubernetes.git
        targetRevision: main
    - deployStartedAt: '2024-05-03T02:27:48Z'
      deployedAt: '2024-05-03T02:27:52Z'
      id: 1
      initiatedBy: {}
      revision: 5590b0e7f8918733d981c4404af88e436cab6e51
      source:
        path: cluster/argocd/sources/keycloak
        repoURL: git@github.com:Binesty/Kubernetes.git
        targetRevision: main
    - deployStartedAt: '2024-05-03T02:29:18Z'
      deployedAt: '2024-05-03T02:29:21Z'
      id: 2
      initiatedBy: {}
      revision: 5590b0e7f8918733d981c4404af88e436cab6e51
      source:
        path: cluster/argocd/sources/keycloak
        repoURL: git@github.com:Binesty/Kubernetes.git
        targetRevision: main
    - deployStartedAt: '2024-06-12T17:41:04Z'
      deployedAt: '2024-06-12T17:41:06Z'
      id: 3
      initiatedBy:
        username: admin
      revision: 5face3373364205637e1826f7fd23219f1821738
      source:
        path: cluster/argocd/sources/keycloak
        repoURL: git@github.com:Binesty/Kubernetes.git
        targetRevision: main
    - deployStartedAt: '2024-07-22T19:55:07Z'
      deployedAt: '2024-07-22T19:55:08Z'
      id: 4
      initiatedBy:
        username: admin
      revision: 2261fa003c30651487a5b17d55126af95ba015d4
      source:
        path: argocd/sources/keycloak
        repoURL: git@github.com:Binesty/Automation.git
        targetRevision: main
    - deployStartedAt: '2024-07-22T20:40:31Z'
      deployedAt: '2024-07-22T20:40:32Z'
      id: 5
      initiatedBy:
        username: admin
      revision: 2261fa003c30651487a5b17d55126af95ba015d4
      source:
        path: argocd/sources/keycloak
        repoURL: git@github.com:Binesty/Automation.git
        targetRevision: main
    - deployStartedAt: '2024-07-23T11:54:13Z'
      deployedAt: '2024-07-23T11:54:27Z'
      id: 6
      initiatedBy:
        username: admin
      revision: 2261fa003c30651487a5b17d55126af95ba015d4
      source:
        path: argocd/sources/keycloak
        repoURL: git@github.com:Binesty/Automation.git
        targetRevision: main
  operationState:
    finishedAt: '2024-07-23T11:54:28Z'
    message: successfully synced (all tasks run)
    operation:
      initiatedBy:
        username: admin
      retry: {}
      sync:
        revision: 2261fa003c30651487a5b17d55126af95ba015d4
        syncOptions:
          - CreateNamespace=true
        syncStrategy:
          hook: {}
    phase: Succeeded
    startedAt: '2024-07-23T11:54:13Z'
    syncResult:
      resources:
        - group: ''
          hookPhase: Running
          kind: ConfigMap
          message: configmap/keycloak-configmap unchanged
          name: keycloak-configmap
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: service/keycloak-service unchanged
          name: keycloak-service
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: service/keycloak-postgres-service unchanged
          name: keycloak-postgres-service
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: apps
          hookPhase: Running
          kind: Deployment
          message: deployment.apps/keycloak configured
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: apps
          hookPhase: Running
          kind: StatefulSet
          message: statefulset.apps/keycloak-postgres configured
          name: keycloak-postgres
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
      revision: 2261fa003c30651487a5b17d55126af95ba015d4
      source:
        path: argocd/sources/keycloak
        repoURL: git@github.com:Binesty/Automation.git
        targetRevision: main
  reconciledAt: '2024-07-23T12:30:57Z'
  resources:
    - kind: ConfigMap
      name: keycloak-configmap
      namespace: keycloak
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak-postgres-service
      namespace: keycloak
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak-service
      namespace: keycloak
      status: Synced
      version: v1
    - group: apps
      health:
        status: Healthy
      kind: Deployment
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
    - group: apps
      health:
        message: 'partitioned roll out complete: 1 new pods have been updated...'
        status: Healthy
      kind: StatefulSet
      name: keycloak-postgres
      namespace: keycloak
      status: Synced
      version: v1
  sourceType: Kustomize
  summary:
    images:
      - postgres:latest
      - quay.io/keycloak/keycloak:latest
  sync:
    comparedTo:
      destination:
        namespace: keycloak
        server: https://kubernetes.default.svc
      source:
        path: argocd/sources/keycloak
        repoURL: git@github.com:Binesty/Automation.git
        targetRevision: main
    revision: e5d794e616b52162b76b97d41c8ca39fd6f171f2
    status: Synced
spec:
  destination:
    namespace: keycloak
    server: https://kubernetes.default.svc
  project: infrastructure
  source:
    path: argocd/sources/keycloak
    repoURL: git@github.com:Binesty/Automation.git
    targetRevision: main
  syncPolicy:
    syncOptions:
      - CreateNamespace=true
