argocd/applications/infrastructure/minio.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"argoproj.io/v1alpha1","kind":"Application","metadata":{"annotations":{},"creationTimestamp":"2024-06-05T20:58:09Z","generation":7484,"labels":{"project":"infrastructure","source":"internal"},"managedFields":[{"apiVersion":"argoproj.io/v1alpha1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/last-applied-configuration":{}},"f:labels":{".":{},"f:project":{},"f:source":{}}},"f:spec":{".":{},"f:destination":{".":{},"f:namespace [...]
      synced (all tasks
      run)","operation":{"initiatedBy":{"username":"admin"},"retry":{},"sync":{"revision":"7d8ffa621fe3e874267da0535c545ac42b77f04a","syncOptions":["CreateNamespace=true"],"syncStrategy":{"hook":{}}}},"phase":"Succeeded","startedAt":"2024-04-30T14:43:43Z","syncResult":{"resources":[{"group":"","hookPhase":"Running","kind":"Namespace","message":"namespace/minio
      configured. Warning: resource namespaces/minio is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"PersistentVolumeClaim","message":"persistentvolumeclaim/nfs-minio
      unchanged","name":"nfs-minio","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/minio-service-api
      configured. Warning: resource services/minio-service-api is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio-service-api","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/minio-service-console
      configured. Warning: resource services/minio-service-console is missing
      the kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio-service-console","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"apps","hookPhase":"Running","kind":"Deployment","message":"deployment.apps/minio
      configured. Warning: resource deployments/minio is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"networking.k8s.io","hookPhase":"Running","kind":"Ingress","message":"ingress.networking.k8s.io/minio-ingress
      configured. Warning: resource ingresses/minio-ingress is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio-ingress","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"}],"revision":"7d8ffa621fe3e874267da0535c545ac42b77f04a","source":{"path":"cluster/argocd/sources/minio","repoURL":"git@github.com:Binesty/Kubernetes.git","targetRevision":"main"}}},"reconciledAt":"2024-07-19T16:55:17Z","resources":[{"health":{"status":"Healthy"},"kind":"PersistentVolumeClaim","name":"nfs-minio","namespace":"minio","status":"Synced","version":"v1"},{"health":{"stat [...]
  creationTimestamp: '2024-07-22T14:51:25Z'
  generation: 213
  labels:
    project: infrastructure
    source: internal
  managedFields:
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:project: {}
            f:source: {}
        f:spec:
          .: {}
          f:destination:
            .: {}
            f:namespace: {}
            f:server: {}
          f:project: {}
          f:source:
            .: {}
            f:path: {}
            f:repoURL: {}
            f:targetRevision: {}
          f:syncPolicy:
            .: {}
            f:syncOptions: {}
        f:status:
          .: {}
          f:controllerNamespace: {}
          f:health: {}
          f:sourceType: {}
          f:summary: {}
          f:sync:
            .: {}
            f:comparedTo:
              .: {}
              f:destination:
                .: {}
                f:namespace: {}
                f:server: {}
              f:source:
                .: {}
                f:path: {}
                f:repoURL: {}
                f:targetRevision: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2024-07-22T14:51:25Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:health:
            f:status: {}
          f:history: {}
          f:operationState:
            .: {}
            f:finishedAt: {}
            f:message: {}
            f:operation:
              .: {}
              f:initiatedBy:
                .: {}
                f:username: {}
              f:retry: {}
              f:sync:
                .: {}
                f:resources: {}
                f:revision: {}
                f:syncOptions: {}
                f:syncStrategy:
                  .: {}
                  f:hook: {}
            f:phase: {}
            f:startedAt: {}
            f:syncResult:
              .: {}
              f:revision: {}
              f:source:
                .: {}
                f:path: {}
                f:repoURL: {}
                f:targetRevision: {}
          f:reconciledAt: {}
          f:resources: {}
          f:summary:
            f:images: {}
          f:sync:
            f:revision: {}
            f:status: {}
      manager: argocd-application-controller
      operation: Update
      time: '2024-07-23T12:39:58Z'
  name: minio
  namespace: argocd
  resourceVersion: '237023'
  uid: 36e9de86-3eb4-4f49-9ab7-74d019c0cd8b
  selfLink: /apis/argoproj.io/v1alpha1/namespaces/argocd/applications/minio
status:
  controllerNamespace: argocd
  health:
    status: Healthy
  history:
    - deployStartedAt: '2024-04-12T13:07:55Z'
      deployedAt: '2024-04-12T13:07:57Z'
      id: 0
      initiatedBy: {}
      revision: d904e809be85b0bb64ac0d9190cda6eca26b24a4
      source:
        path: cluster/argocd/sources/minio
        repoURL: git@github.com:Binesty/Kubernetes.git
        targetRevision: main
    - deployStartedAt: '2024-04-28T18:14:54Z'
      deployedAt: '2024-04-28T18:14:55Z'
      id: 1
      initiatedBy: {}
      revision: 43b61aa6ef5a8977d8f1d5247e297f9afe36aa58
      source:
        path: cluster/argocd/sources/minio
        repoURL: git@github.com:Binesty/Kubernetes.git
        targetRevision: main
    - deployStartedAt: '2024-04-30T14:43:43Z'
      deployedAt: '2024-04-30T14:43:45Z'
      id: 2
      initiatedBy: {}
      revision: 7d8ffa621fe3e874267da0535c545ac42b77f04a
      source:
        path: cluster/argocd/sources/minio
        repoURL: git@github.com:Binesty/Kubernetes.git
        targetRevision: main
    - deployStartedAt: '2024-07-22T19:53:59Z'
      deployedAt: '2024-07-22T19:54:03Z'
      id: 3
      initiatedBy:
        username: admin
      revision: 2261fa003c30651487a5b17d55126af95ba015d4
      source:
        path: argocd/sources/minio
        repoURL: git@github.com:Binesty/Automation.git
        targetRevision: main
    - deployStartedAt: '2024-07-23T12:24:08Z'
      deployedAt: '2024-07-23T12:24:12Z'
      id: 4
      initiatedBy:
        username: admin
      revision: e5d794e616b52162b76b97d41c8ca39fd6f171f2
      source:
        path: argocd/sources/minio
        repoURL: git@github.com:Binesty/Automation.git
        targetRevision: main
  operationState:
    finishedAt: '2024-07-23T12:25:25Z'
    message: successfully synced (no more tasks)
    operation:
      initiatedBy:
        username: admin
      retry: {}
      sync:
        resources:
          - group: networking.k8s.io
            kind: Ingress
            name: minio-ingress
            namespace: minio
        revision: e5d794e616b52162b76b97d41c8ca39fd6f171f2
        syncOptions:
          - CreateNamespace=true
          - PruneLast=true
        syncStrategy:
          hook: {}
    phase: Succeeded
    startedAt: '2024-07-23T12:25:24Z'
    syncResult:
      revision: e5d794e616b52162b76b97d41c8ca39fd6f171f2
      source:
        path: argocd/sources/minio
        repoURL: git@github.com:Binesty/Automation.git
        targetRevision: main
  reconciledAt: '2024-07-23T12:39:57Z'
  resources:
    - health:
        status: Healthy
      kind: PersistentVolumeClaim
      name: nfs-minio
      namespace: minio
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: minio-service-api
      namespace: minio
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: minio-service-console
      namespace: minio
      status: Synced
      version: v1
    - group: apps
      health:
        status: Healthy
      kind: Deployment
      name: minio
      namespace: minio
      status: Synced
      version: v1
  sourceType: Kustomize
  summary:
    images:
      - quay.io/minio/minio:latest
  sync:
    comparedTo:
      destination:
        namespace: minio
        server: https://kubernetes.default.svc
      source:
        path: argocd/sources/minio
        repoURL: git@github.com:Binesty/Automation.git
        targetRevision: main
    revision: e5d794e616b52162b76b97d41c8ca39fd6f171f2
    status: Synced
spec:
  destination:
    namespace: minio
    server: https://kubernetes.default.svc
  project: infrastructure
  source:
    path: argocd/sources/minio
    repoURL: git@github.com:Binesty/Automation.git
    targetRevision: main
  syncPolicy:
    syncOptions:
      - CreateNamespace=true
