argocd/applications/infrastructure/redis.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"argoproj.io/v1alpha1","kind":"Application","metadata":{"annotations":{},"creationTimestamp":"2024-04-25T20:20:49Z","generation":1450,"labels":{"project":"infrastructure","source":"external"},"managedFields":[{"apiVersion":"argoproj.io/v1alpha1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/last-applied-configuration":{}},"f:labels":{".":{},"f:project":{},"f:source":{}}},"f:spec":{".":{},"f:destination":{".":{},"f:namespace [...]
      synced (all tasks
      run)","operation":{"initiatedBy":{"username":"admin"},"retry":{},"sync":{"revision":"19.0.2","syncOptions":["CreateNamespace=true"],"syncStrategy":{"hook":{}}}},"phase":"Succeeded","startedAt":"2024-05-01T00:00:07Z","syncResult":{"resources":[{"group":"","hookPhase":"Succeeded","kind":"Secret","message":"ignored
      (requires
      pruning)","name":"redis","namespace":"redis","status":"PruneSkipped","syncPhase":"Sync","version":"v1"},{"group":"networking.k8s.io","hookPhase":"Running","kind":"NetworkPolicy","message":"networkpolicy.networking.k8s.io/redis
      configured","name":"redis","namespace":"redis","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"ServiceAccount","message":"serviceaccount/redis
      unchanged","name":"redis","namespace":"redis","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"ConfigMap","message":"configmap/redis-configuration
      unchanged","name":"redis-configuration","namespace":"redis","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"ConfigMap","message":"configmap/redis-health
      unchanged","name":"redis-health","namespace":"redis","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"ConfigMap","message":"configmap/redis-scripts
      unchanged","name":"redis-scripts","namespace":"redis","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/redis-headless
      unchanged","name":"redis-headless","namespace":"redis","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/redis
      configured","name":"redis","namespace":"redis","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"apps","hookPhase":"Running","kind":"StatefulSet","message":"statefulset.apps/redis-node
      configured","name":"redis-node","namespace":"redis","status":"Synced","syncPhase":"Sync","version":"v1"}],"revision":"19.0.2","source":{"chart":"redis","helm":{"parameters":[{"name":"auth.password","value":"chageme"},{"name":"sentinel.enabled","value":"true"},{"name":"replica.replicaCount","value":"1"},{"name":"auth.existingSecret","value":"redis-secret"},{"name":"auth.existingSecretPasswordKey","value":"REDIS_PASSWORD"}]},"repoURL":"https://charts.bitnami.com/bitnami","targetRevision":"19 [...]
      rolling update complete 1 pods at revision
      redis-node-7f9454d9bf...","status":"Healthy"},"kind":"StatefulSet","name":"redis-node","namespace":"redis","status":"Synced","version":"v1"},{"group":"networking.k8s.io","kind":"NetworkPolicy","name":"redis","namespace":"redis","status":"Synced","version":"v1"}],"sourceType":"Helm","summary":{"images":["docker.io/bitnami/redis-sentinel:7.2.4-debian-12-r7","docker.io/bitnami/redis:7.2.4-debian-12-r9"]},"sync":{"comparedTo":{"destination":{"namespace":"redis","server":"https://kubernetes.def [...]
  creationTimestamp: '2024-07-22T12:18:30Z'
  generation: 1891
  labels:
    project: infrastructure
    source: external
  managedFields:
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:project: {}
            f:source: {}
        f:spec:
          .: {}
          f:destination:
            .: {}
            f:namespace: {}
            f:server: {}
          f:project: {}
          f:source:
            .: {}
            f:chart: {}
            f:helm:
              .: {}
              f:parameters: {}
            f:repoURL: {}
          f:syncPolicy:
            .: {}
            f:syncOptions: {}
        f:status:
          .: {}
          f:controllerNamespace: {}
          f:health: {}
          f:summary: {}
          f:sync:
            .: {}
            f:comparedTo:
              .: {}
              f:destination:
                .: {}
                f:namespace: {}
                f:server: {}
              f:source:
                .: {}
                f:chart: {}
                f:helm:
                  .: {}
                  f:parameters: {}
                f:repoURL: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2024-07-22T12:18:30Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:source:
            f:targetRevision: {}
      manager: argocd-server
      operation: Update
      time: '2024-10-03T14:44:52Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:health:
            f:status: {}
          f:history: {}
          f:operationState:
            .: {}
            f:finishedAt: {}
            f:message: {}
            f:operation:
              .: {}
              f:initiatedBy:
                .: {}
                f:username: {}
              f:retry: {}
              f:sync:
                .: {}
                f:revision: {}
                f:syncOptions: {}
                f:syncStrategy:
                  .: {}
                  f:hook: {}
            f:phase: {}
            f:startedAt: {}
            f:syncResult:
              .: {}
              f:resources: {}
              f:revision: {}
              f:source:
                .: {}
                f:chart: {}
                f:helm:
                  .: {}
                  f:parameters: {}
                f:repoURL: {}
                f:targetRevision: {}
          f:reconciledAt: {}
          f:resources: {}
          f:sourceType: {}
          f:summary:
            f:images: {}
          f:sync:
            f:comparedTo:
              f:source:
                f:targetRevision: {}
            f:revision: {}
            f:status: {}
      manager: argocd-application-controller
      operation: Update
      time: '2024-10-03T15:00:36Z'
  name: redis
  namespace: argocd
  resourceVersion: '2134192'
  uid: e73c172e-046e-4c63-9364-8d524ee0b6d2
  selfLink: /apis/argoproj.io/v1alpha1/namespaces/argocd/applications/redis
status:
  controllerNamespace: argocd
  health:
    status: Healthy
  history:
    - deployStartedAt: '2024-04-03T00:34:46Z'
      deployedAt: '2024-04-03T00:34:48Z'
      id: 0
      initiatedBy: {}
      revision: 19.0.2
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.0.2
    - deployStartedAt: '2024-04-05T04:59:23Z'
      deployedAt: '2024-04-05T04:59:29Z'
      id: 1
      initiatedBy: {}
      revision: 19.0.2
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.0.2
    - deployStartedAt: '2024-04-22T16:49:56Z'
      deployedAt: '2024-04-22T16:50:01Z'
      id: 2
      initiatedBy: {}
      revision: 19.0.2
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.0.2
    - deployStartedAt: '2024-04-24T17:56:21Z'
      deployedAt: '2024-04-24T17:56:26Z'
      id: 3
      initiatedBy: {}
      revision: 19.0.2
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
            - name: replica.replicaCount
              value: '1'
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.0.2
    - deployStartedAt: '2024-04-26T00:50:14Z'
      deployedAt: '2024-04-26T00:50:20Z'
      id: 4
      initiatedBy: {}
      revision: 19.0.2
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
            - name: replica.replicaCount
              value: '1'
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.0.2
    - deployStartedAt: '2024-05-01T00:00:07Z'
      deployedAt: '2024-05-01T00:00:09Z'
      id: 5
      initiatedBy: {}
      revision: 19.0.2
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
            - name: replica.replicaCount
              value: '1'
            - name: auth.existingSecret
              value: redis-secret
            - name: auth.existingSecretPasswordKey
              value: REDIS_PASSWORD
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.0.2
    - deployStartedAt: '2024-07-22T19:57:12Z'
      deployedAt: '2024-07-22T19:57:13Z'
      id: 6
      initiatedBy:
        username: admin
      revision: 19.0.2
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
            - name: replica.replicaCount
              value: '1'
            - name: auth.existingSecret
              value: redis-secret
            - name: auth.existingSecretPasswordKey
              value: REDIS_PASSWORD
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 19.0.2
    - deployStartedAt: '2024-10-03T14:44:52Z'
      deployedAt: '2024-10-03T14:44:53Z'
      id: 7
      initiatedBy:
        username: admin
      revision: 20.1.7
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
            - name: replica.replicaCount
              value: '1'
            - name: auth.existingSecret
              value: redis-secret
            - name: auth.existingSecretPasswordKey
              value: REDIS_PASSWORD
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 20.1.7
  operationState:
    finishedAt: '2024-10-03T14:44:53Z'
    message: successfully synced (all tasks run)
    operation:
      initiatedBy:
        username: admin
      retry: {}
      sync:
        revision: 20.1.7
        syncOptions:
          - CreateNamespace=true
        syncStrategy:
          hook: {}
    phase: Succeeded
    startedAt: '2024-10-03T14:44:52Z'
    syncResult:
      resources:
        - group: networking.k8s.io
          hookPhase: Running
          kind: NetworkPolicy
          message: networkpolicy.networking.k8s.io/redis configured
          name: redis
          namespace: redis
          status: Synced
          syncPhase: Sync
          version: v1
        - group: policy
          hookPhase: Running
          kind: PodDisruptionBudget
          message: poddisruptionbudget.policy/redis-node created
          name: redis-node
          namespace: redis
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: ServiceAccount
          message: serviceaccount/redis configured
          name: redis
          namespace: redis
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: ConfigMap
          message: configmap/redis-configuration configured
          name: redis-configuration
          namespace: redis
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: ConfigMap
          message: configmap/redis-health configured
          name: redis-health
          namespace: redis
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: ConfigMap
          message: configmap/redis-scripts configured
          name: redis-scripts
          namespace: redis
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: service/redis-headless configured
          name: redis-headless
          namespace: redis
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: service/redis configured
          name: redis
          namespace: redis
          status: Synced
          syncPhase: Sync
          version: v1
        - group: apps
          hookPhase: Running
          kind: StatefulSet
          message: statefulset.apps/redis-node configured
          name: redis-node
          namespace: redis
          status: Synced
          syncPhase: Sync
          version: v1
      revision: 20.1.7
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
            - name: replica.replicaCount
              value: '1'
            - name: auth.existingSecret
              value: redis-secret
            - name: auth.existingSecretPasswordKey
              value: REDIS_PASSWORD
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 20.1.7
  reconciledAt: '2024-10-03T15:00:35Z'
  resources:
    - kind: ConfigMap
      name: redis-configuration
      namespace: redis
      status: Synced
      version: v1
    - kind: ConfigMap
      name: redis-health
      namespace: redis
      status: Synced
      version: v1
    - kind: ConfigMap
      name: redis-scripts
      namespace: redis
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: redis
      namespace: redis
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: redis-headless
      namespace: redis
      status: Synced
      version: v1
    - kind: ServiceAccount
      name: redis
      namespace: redis
      status: Synced
      version: v1
    - group: apps
      health:
        message: >-
          statefulset rolling update complete 1 pods at revision
          redis-node-5548bf7478...
        status: Healthy
      kind: StatefulSet
      name: redis-node
      namespace: redis
      status: Synced
      version: v1
    - group: networking.k8s.io
      kind: NetworkPolicy
      name: redis
      namespace: redis
      status: Synced
      version: v1
    - group: policy
      kind: PodDisruptionBudget
      name: redis-node
      namespace: redis
      status: Synced
      version: v1
  sourceType: Helm
  summary:
    images:
      - docker.io/bitnami/redis-sentinel:7.4.1-debian-12-r0
      - docker.io/bitnami/redis:7.4.1-debian-12-r0
  sync:
    comparedTo:
      destination:
        namespace: redis
        server: https://kubernetes.default.svc
      source:
        chart: redis
        helm:
          parameters:
            - name: auth.password
              value: chageme
            - name: sentinel.enabled
              value: 'true'
            - name: replica.replicaCount
              value: '1'
            - name: auth.existingSecret
              value: redis-secret
            - name: auth.existingSecretPasswordKey
              value: REDIS_PASSWORD
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 20.1.7
    revision: 20.1.7
    status: Synced
spec:
  destination:
    namespace: redis
    server: https://kubernetes.default.svc
  project: infrastructure
  source:
    chart: redis
    helm:
      parameters:
        - name: auth.password
          value: chageme
        - name: sentinel.enabled
          value: 'true'
        - name: replica.replicaCount
          value: '1'
        - name: auth.existingSecret
          value: redis-secret
        - name: auth.existingSecretPasswordKey
          value: REDIS_PASSWORD
    repoURL: https://charts.bitnami.com/bitnami
    targetRevision: 20.1.7
  syncPolicy:
    syncOptions:
      - CreateNamespace=true
